# seedance-api

./: .dockerignore  .env.example  .gitignore  ByteDance_v.md  Dockerfile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 457b06cd11cc_initial.py  7286c2e95b70_add_enhance_tasks_upscale_resolution.py  a1b2c3d4e5f6_add_name_and_local_path.py  ba1f055235a8_add_upscale_resolution_to_generation_.py  c3e8f1a2b4d5_add_image_tasks.py  d4f9e2b7a1c8_add_cost_credits_to_enhance_tasks.py  f13f71ffab1a_add_batch_id_and_batch_order.py
frontend/: Dockerfile  app.py
frontend-next/: Dockerfile  package-lock.json  package.json
frontend-next/app/: globals.css  layout.tsx  page.tsx
frontend-next/components/: BatchTab.tsx  GenerateInput.tsx  Settings.tsx  TaskCard.tsx
frontend-next/lib/: api.ts  useLocalStorage.ts
src/: main.py
src/api/routes/: batch.py  generations.py  images.py  uploads.py
src/core/: database.py  logging.py  settings.py
src/models/: enhance.py  generation.py  image.py  user.py
src/repositories/: enhance.py  generation.py  image.py  user.py
src/schemas/: content.py  generation.py  image.py
src/services/: seedance_client.py  topaz_client.py  worker.py
