[project]
name = "seedance-api"
version = "0.1.0"
description = "FastAPI server for SeeDance 2.0 video generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "greenlet>=3.5.0",
    "bcrypt>=5.0.0",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
